<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">

    <string name="app_name" translatable="false">Master for MCPE</string>

    <!-- settings -->
    <string name="settings">Settings</string>
    <string name="settings_general_summary">General information</string>
    <string name="settings_general">General</string>

    <string name="settings_aboutus">About</string>
    <string name="settings_aboutus_summary">Information about our application</string>
    <string name="settings_aboutus_header">About</string>
    <string name="settings_aboutus_version">Version</string>

    <string name="settings_title_licenses">Licenses</string>
    <string name="settings_summary_licenses">License agreement of the software used</string>
    <string name="settings_key_open_licenses" translatable="false">open_licenses</string>

    <string name="settings_title_confidentiality">Confidentiality Policy</string>
    <string name="settings_summary_confidentiality">Privacy policy personal information</string>
    <string name="settings_confidentiality_key" translatable="false">confidentiality_key</string>
    <string name="settings_confidentiality_link" translatable="false">https://storage.googleapis.com/json-data-base.appspot.com/policy/html/confidentiality.html</string>

    <string name="settings_consent_policy_key" translatable="false">consent_policy_key</string>


    <!--Preference-->
    <string name="appreciated_pref" translatable="false">appreciated_pref</string>
    <string name="launch_pref" translatable="false">launch_pref</string>
    <string name="favorite_pref" translatable="false">favorite_pref</string>

    <!-- General -->
    <string name="loading">Loading…</string>
    <string name="extra">Extra</string>
    <string name="share">Share</string>
    <string name="send">Send</string>
    <string name="share_choise">Share it</string>
    <string name="rate">Rate</string>
    <string name="download_file">Downloading file..</string>
    <string name="save_to_minecraft">Save to Minecraft PE</string>
    <string name="save_to_gallery">Save to Gallery</string>
    <string name="back_pressed">Please click BACK again to exit</string>
    <string name="description">Description</string>
    <string name="feedback">Feedback</string>
    <string name="later">Later</string>
    <string name="premium">Premium</string>
    <string name="unlock">Unlock</string>
    <string name="ad" translatable="false">Ad</string>

    <!--Activity Name-->
    <string name="activity_offerwall">Apps</string>
    <string name="activity_wallpaper">Wallpapers</string>
    <string name="activity_wallpaper_set">Wallpaper Set</string>
    <string name="activity_skins">Skins</string>
    <string name="activity_skin_stealer">Stealer</string>
    <string name="activity_favorite">Favorite</string>
    <string name="activity_search">Search</string>

    <!--Activity Favorite-->
    <string name="favorite_is_empty">Favorite is empty</string>
    <string name="add_to_favorite">Add to favorite</string>
    <string name="added_to_favorite">Added to favorite</string>
    <string name="removed_from_favorite">Removed from favorite</string>

    <!--Activity Wallpaper-->
    <string name="save">Save</string>
    <string name="set_as_wallpaper">Set As Wallpaper</string>
    <string name="wallpaper_set_title">Wallpaper set</string>
    <string name="wallpaper_set_description">Wallpapers successfully installed on the desktop of your device.</string>
    <string name="wallpaper_not_set_title">Wallpaper not set</string>
    <string name="wallpaper_not_set_description">Wallpapers not installed on the desktop of your device.</string>

    <!--Activity Server-->
    <string name="server_address">Address:</string>
    <string name="server_port">Port:</string>

    <!--Dialogs-->
    <string name="open">Open</string>
    <string name="download">Download</string>
    <string name="downloading_progress_format">%1$s of %2$s</string>

    <!--File Save Dialog-->
    <string name="file_saved">File successfully saved</string>

    <!--Content Dialogs-->
    <string name="mod_dialog_description">Import mod in Minecraft PE?</string>
    <string name="skin_dialog_description">Import skin in Minecraft PE?</string>
    <string name="texture_dialog_blocklauncher_description">Import texture in Minecraft PE?</string>
    <string name="skin_dialog_description_success">Skin installed and applied in Minecraft PE. \n\nOpen Minecraft PE?</string>

    <!--Minecraft Dialog-->
    <string name="minecraft_not_installed">Minecraft PE not installed</string>
    <string name="close_minecraft">Please, close Minecraft PE</string>

    <!--BlockLauncher Dialog-->
    <string name="blocklauncher_not_installed">BlockLauncher not installed</string>

    <!--Network Dialog-->
    <string name="no_network">No network connection</string>
    <string name="close">CLOSE</string>

    <!--Version Selection Dialog-->
    <string name="version">Version: </string>
    <string name="all_version">All Versions</string>
    <string name="sort_by_version">Sort by Version</string>

    <!--Error Dialog-->
    <string name="error">Error</string>

    <!--Permission-->
    <string name="permission_denied">Permission denied</string>
    <string name="permission_accepted">Permission accepted</string>

    <!--Rate Us Dialog-->
    <string name="like_app">Do you like %1$s ?</string>
    <string name="rate_us_on_google">Please rate our app in Google Play!</string>

    <!--Menu-->
    <string name="search">Search</string>
    <string name="edit">Edit</string>

    <!--Email-->
    <string name="support_gmail" translatable="false">multicraft.studio@mail.ru</string>
    <string name="not_email_client">There are no email clients installed.</string>

    <!--Example-->
    <string name="title_example" translatable="false">Title example text</string>
    <string name="description_example" translatable="false">Description example text very, very, very, very, very, very, very, very, very, very, very, very, very, very, very, very, very, very, very, very long</string>

    <!--Building Dialog-->
    <string name="select_map">Select a map</string>
    <string name="no_maps_found">No maps found</string>
    <string name="create_one_map">Please create at least one map</string>

    <!--Protocol-->
    <string name="get_on_google_play" translatable="false">Get in on Google Play</string>

    <!--Import-->
    <string name="file_success_import">File successfully imported</string>
    <string name="file_error_import">Error importing file</string>

    <!--Navigation Drawer-->
    <string name="drawer_open" translatable="false" tools:keep="@string/drawer_open">Drawer open</string>
    <string name="drawer_close" translatable="false" tools:keep="@string/drawer_close">Drawer close</string>

    <!--Craft Guide Strings-->
    <string name="any_fuel">Any Fuel</string>
    <string name="brewing">Brewing</string>
    <string name="crafting">Crafting</string>
    <string name="drops">Drops</string>
    <string name="eggs">Eggs</string>
    <string name="experience">Experience</string>
    <string name="food">Food</string>
    <string name="health">Health</string>
    <string name="item">Item</string>
    <string name="mob">Mob</string>
    <string name="music_discs">Music Discs</string>
    <string name="other">Other</string>
    <string name="spawn_requirements">Spawn Requirements</string>
    <string name="tap_to_open">Tap to open this item</string>
    <string name="tools">Tools</string>
    <string name="transport">Transport</string>
    <string name="used_to_make">Used to Make</string>
    <string name="with">with</string>
    <string name="biome">Biome</string>
    <string name="biomes">Biomes</string>
    <string name="items">Items</string>
    <string name="mobs">Mobs</string>
    <string name="basic">Basic</string>
    <string name="defence">Defence</string>
    <string name="blocks">Blocks</string>
    <string name="mechanism">Mechanism</string>
    <string name="wool">Wool</string>
    <string name="dyes">Dyes</string>
    <string name="temperature">Temperature</string>
    <string name="features">Features</string>
    <string name="none">None</string>
    <string name="not_craft_item">Cannot craft this item</string>
    <string name="item_not_exist">Item does not exist</string>
    <string name="mob_not_exist">Mob does not exist</string>
    <string name="strength">Strength</string>
    <string name="easy">Easy</string>
    <string name="normal">Normal</string>
    <string name="hard">Hard</string>
    <string name="plants">Plants</string>
    <string name="resources">Resources</string>
    <string name="ingredients">Ingredients</string>
    <string name="carpets">Carpets</string>
    <string name="glass">Glass</string>

    <!--Skin Editor Strings-->
    <string name="skin_editor">Skins Editor</string>

    <string name="di_menu_title">Menu</string>
    <string name="di_menu_item_more_from_us">More from Us!</string>
    <string name="di_menu_item_rate_app">Rate Us</string>
    <string name="di_menu_item_about_us">About Us</string>

    <string name="di_about_us_title">Version %1$s</string>
    <string name="di_about_us_text" translatable="false">Email: multicraft.studio@mail.ru</string>

    <string name="di_error_skin_size_title">Unssuported Skin Size</string>
    <string name="di_error_skin_size_text">We only support 64x32 or 64x64 skin.</string>

    <string name="di_palette_title">Choose color</string>
    <string name="di_palette_positive">Choose</string>
    <string name="di_palette_negative">Cancel</string>

    <string name="di_parts_title">Hide/Show Body Parts</string>

    <string name="di_new_character_title">New Character</string>
    <string name="di_new_character_negative">Cancel</string>
    <string name="di_new_character_item_steve_skin">Steve Skin</string>
    <string name="di_new_character_item_gallery">Browse Gallery</string>

    <string name="di_save_success_title">Success!</string>
    <string name="di_save_success_text">Skin is saved!</string>

    <string name="di_save_error_title">Error!</string>
    <string name="di_save_error_text">Skin is not saved to gallery.</string>

    <string name="di_skin_catalog">Skins Catalog</string>
    <string name="never">Never</string>

    <string name="file_storage_error">File not saved due to storage error</string>
    <string name="file_network_error">File not saved due to network error</string>
    <string name="installing">Installing</string>
    <string name="press_again_to_cancell">Press again to cancel download and exit</string>
    <string name="shop">Shop</string>
    <string name="you_earned_coins">You earned %1$d coins!</string>
    <string name="watch_and_gain">Watch video and gain free coins!</string>
    <string name="watch">Watch</string>
    <string name="free_coins">Free coins</string>

    <string name="bonus_format">Bonus %1$d%%</string>
    <string name="coins_amount_format">%1$d coins</string>
    <string name="related">Related</string>
    <string name="get">Get</string>
    <string name="settings_title_consent_policy_key">Consent Policy</string>
    <string name="settings_summary_consent_policy_key">Consent Policy from European Users</string>
    <string name="retry">Retry</string>
    <string name="get_more_coins">Get more coins</string>
    <string name="get_more_coins_description">Get %1$d coins with a %2$d%% discount!</string>
    <string name="free">Free</string>
    <string name="watch_video">Watch video</string>
    <string name="buy">Buy</string>
    <string name="paid">Paid</string>
    <string name="more">More</string>
    <string name="read_more">Read more</string>

</resources>
