<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvMoreFromUs"
        style="@style/DialogItem"
        android:drawableLeft="@drawable/ic_google_play"
        android:text="@string/di_menu_item_more_from_us"/>

    <TextView
        android:id="@+id/tvRateApp"
        style="@style/DialogItem"
        android:drawableLeft="@drawable/ic_rate_app"
        android:text="@string/di_menu_item_rate_app"/>

    <TextView
        android:id="@+id/tvAboutUs"
        style="@style/DialogItem"
        android:drawableLeft="@drawable/ic_about_us"
        android:text="@string/di_menu_item_about_us"/>

</LinearLayout>
