<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvSteveSkin"
        style="@style/DialogItem"
        android:drawableLeft="@drawable/ic_steve_skin"
        android:text="@string/di_new_character_item_steve_skin"/>

    <TextView
        android:id="@+id/tvGallery"
        style="@style/DialogItem"
        android:drawableLeft="@drawable/ic_gallery"
        android:text="@string/di_new_character_item_gallery"/>

    <TextView
        android:id="@+id/tvCatalog"
        style="@style/DialogItem"
        android:drawableLeft="@drawable/ic_apps"
        android:text="@string/di_skin_catalog"/>

</LinearLayout>
