<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/bannerLayout"
        android:fitsSystemWindows="true">

        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <include
                android:id="@+id/toolbar"
                layout="@layout/layout_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"/>

        </android.support.design.widget.AppBarLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="?attr/actionBarSize">

            <ProgressBar
                android:id="@+id/progressBar"
                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:indeterminateOnly="true"
                android:progressDrawable="@drawable/progressbar_states"
                android:visibility="gone"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/imageViewItem"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:adjustViewBounds="true"
                    android:focusable="false"
                    android:scaleType="centerCrop"
                    tools:ignore="contentDescription"
                    tools:src="@drawable/empty_image"/>

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="bottom|right"
                android:orientation="vertical">

                <com.github.clans.fab.FloatingActionMenu
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/fab_margin"
                    fab:menu_animationDelayPerItem="0"
                    fab:menu_labels_ellipsize="end"
                    fab:menu_labels_maxLines="2"
                    fab:menu_labels_singleLine="true">

                    <com.github.clans.fab.FloatingActionButton
                        android:id="@+id/fab_set_as_wallpaper"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_fab_check"
                        fab:fab_label="@string/set_as_wallpaper"
                        fab:fab_size="mini"/>

                    <com.github.clans.fab.FloatingActionButton
                        android:id="@+id/fab_share"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_fab_share"
                        fab:fab_label="@string/share"
                        fab:fab_size="mini"/>

                    <com.github.clans.fab.FloatingActionButton
                        android:id="@+id/fab_save"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_fab_save"
                        fab:fab_label="@string/save"
                        fab:fab_size="mini"/>

                </com.github.clans.fab.FloatingActionMenu>

            </LinearLayout>

        </RelativeLayout>

    </android.support.design.widget.CoordinatorLayout>

    <LinearLayout
        android:id="@+id/bannerLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/banner_margin"
        android:layout_marginTop="@dimen/banner_margin"
        android:orientation="vertical"
        android:visibility="gone"/>

</RelativeLayout>